_includes/main.css
:root {
    --primary-colour: #FFFFFF;
    --secondary-colour: #111111;
    --tertiary-colour: #0000EE;
}

@media (prefers-color-scheme: dark) {
    --primary-colour: #111111; 
    --secondary-colour: #FFFFFF;
    --tertiary-colour: #FFFFFF;
}

body {
    font-family: arial, sans-serif, monospace;
    font-size:1.1em;
    margin:0;
    padding:1em;
    background-color: var(--primary-colour);
    color: var(--secondary-colour);
}

a {
    color: var(--tertiary-colour);
}


h1, h2, h3, p {
    font-size:inherit;
    font-weight:normal;
    line-height:1.4;
}

a, cite, em, i, .underline {
    font-style: normal;
    text-decoration: underline;
}

time {
    display:block;
}

figure {
    margin:0;
}

img {
    display: block;
    width: 100%;
    filter: grayscale(1);
}

hr {
    margin: 0;
    border:none;
    height:0.09em;
    background-color: var(--secondary-colour);
}

button {
    border:none;
    color: var(--tertiary-colour);
    font: inherit;
    padding:0;
    text-decoration: underline;
    background-color: inherit;
}

button:hover {
    cursor: pointer;
}

header, article, main ul li, figure, p {
    margin-bottom: 1em;
}

header h1 {
    display:inline;
}

header h1, header ul {
    margin:0;
}

header ul, main ul, footer ul {
    list-style-type: none;
    margin-left: 0;
    padding-left: 0;
}

blockquote, q {
    quotes: "\0027" "\0027" "\0022" "\0022";
}

blockquote p:before {
    content: open-quote;
}

blockquote p:after {
    content: close-quote;
}


@media screen and (min-width: 30em) {
    body {
        font-size: 1.7em;
    }
}

@media screen and (min-width: 60em) {
    figure {
        width: 33%;
        margin-left: auto;
        margin-right: auto;
    }
}

@media print {
    img {
        width: 33%;
        margin-left: auto;
        margin-right: auto;
    }
    
    .print-link:after {
        content:" (" attr(href) ") ";
    }

    .no-print {
        display: none;
    }
}

:focus, a:hover, button:hover, ::selection {
    color: var(--primary-colour);
    background-color: var(--tertiary-colour);
}

.no-show {
    display:none;
}

